<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

<LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/first_select"
              android:visibility="visible">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/sys_sum"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/selectSys">
        <RadioButton android:id="@+id/num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/num_like"
                     android:checked="true"/>

        <RadioButton android:id="@+id/let"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/let_like"/>

        <RadioButton android:id="@+id/pro"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/pro_like"/>
    </RadioGroup>

</LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/first_limit"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:visibility="gone">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_back"
            android:src="@drawable/ic_action_previous_item"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:scaleType="fitCenter"
            android:background="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limit_sum"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/first_back"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:id="@+id/low"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit_low"
                android:textSize="17sp"
                android:textColor="#000000"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lowest"
                android:orientation="vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/heighestContainer"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0.19"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_marginLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit_high"
                android:textSize="17dp"
                android:textColor="#000000"
                android:textIsSelectable="false"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/highest"
                android:orientation="vertical"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</LinearLayout>