<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    
        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:background="@color/accent"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/add_subject"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </RelativeLayout>

        <Button
            android:id="@+id/colorButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/average"
            android:layout_alignRight="@+id/name"
            android:layout_below="@+id/name"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:background="#0000FF" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/fach_name"
            android:inputType="textCapWords"
            />

        <TextView
            android:id="@+id/average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name"
            android:layout_below="@+id/name"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="17dp"
            android:text="@string/farbe_name"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <View
            android:id="@+id/view1"
            android:layout_width="2dp"
            android:layout_height="25dp"
            android:layout_alignLeft="@+id/average"
            android:layout_below="@+id/average" />

</RelativeLayout>